syntax = "proto3";
package palomachain.paloma.skyway;

import "gogoproto/gogo.proto";

option go_package = "github.com/palomachain/paloma/v2/x/skyway/types";

enum LimitPeriod {
  NONE = 0;
  DAILY = 1;
  WEEKLY = 2;
  MONTHLY = 3;
  YEARLY = 4;
}

// Allow at most `limit` tokens of `token` to be transferred within a
// `limit_period` window. `limit_period` will be converted to blocks.
// If more than `limit` tokens are attempted to be transferred between those
// block heights, the transfer is not allowed.
// If the sender is in `exempt_addresses`, the limits are not checked nor
// updated.
message BridgeTransferLimit {
  string token = 1;
  string limit = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  LimitPeriod limit_period = 3;
  repeated bytes exempt_addresses = 4 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
}

// Transfer usage counters used to check for transfer limits for a single denom.
// `total` maintains the total amount transferred during the current window.
// `start_block_height` maintains the block height of the first transfer in the
// current window.
message BridgeTransferUsage {
  string total = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  int64 start_block_height = 2;
}
